# 2026-p1-shravya132

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
