[project]
name = "practical01"
version = "0.1.0"
description = "Practical guide to implementing a web application programming interface (API) using Flask."
authors = [
    {name = "shravya132",email = "shravyasekar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
flask = "^3.1.3"
